fixed tune selector overlapping transpose controls in edit form

--- a/app/assets/stylesheets/components/song_form.scss
+++ b/app/assets/stylesheets/components/song_form.scss
@@ -1,10 +1,6 @@
-.song-form {
+.song-form .lyric-form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-
-  div {
-    grid-column: 1 / -1; // full width default
-  }
 
   div.form, div.preview {
     grid-column: span 1;
